# split-bill

./: README.md
.github/workflows/: ci.yml
backend/: CMakeLists.txt  Makefile  README.md  docker-compose.yml
backend/configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
backend/postgresql/data/: initial_data.sql
backend/postgresql/schemas/: db_1.sql
backend/src/: hello.cpp  main.cpp
backend/src/handlers/lib/: auth.cpp  auth.hpp
backend/src/handlers/v1/login/: view.cpp  view.hpp
backend/src/handlers/v1/products/: filters.cpp  filters.hpp
backend/src/handlers/v1/products/add-product/: view.cpp  view.hpp
backend/src/handlers/v1/products/bulk-update/: view.cpp  view.hpp
backend/src/handlers/v1/products/delete-product/: view.cpp  view.hpp
backend/src/handlers/v1/products/get-product/: view.cpp  view.hpp
backend/src/handlers/v1/products/get-products/: view.cpp  view.hpp
backend/src/handlers/v1/register/: view.cpp  view.hpp
backend/src/handlers/v1/rooms/: filters.cpp  filters.hpp
backend/src/handlers/v1/rooms/create-room/: view.cpp  view.hpp
backend/src/handlers/v1/rooms/get-all-rooms/: view.cpp  view.hpp
backend/src/handlers/v1/rooms/get-created-rooms/: view.cpp  view.hpp
backend/src/handlers/v1/rooms/get-room/: view.cpp  view.hpp
backend/src/handlers/v1/rooms/get-room-user-prices/: view.cpp  view.hpp
backend/src/handlers/v1/rooms/get-room-users/: view.cpp  view.hpp
backend/src/handlers/v1/rooms/join-room/: view.cpp  view.hpp
backend/src/handlers/v1/rooms/update-room/: view.cpp  view.hpp
backend/src/handlers/v1/user-info/: view.cpp  view.hpp
backend/src/handlers/v1/user-products/: filters.cpp  filters.hpp
backend/src/handlers/v1/user-products/add-user-to-product/: view.cpp  view.hpp
backend/src/handlers/v1/user-products/get-user-product/: view.cpp  view.hpp
backend/src/handlers/v1/user-products/get-user-products/: view.cpp  view.hpp
backend/src/handlers/v1/user-products/update-user-product/: view.cpp  view.hpp
backend/src/models/: detailed-room.cpp  detailed-room.hpp  product-bulk-update.cpp  product-bulk-update.hpp  product.cpp  product.hpp  room.cpp  room.hpp  session.hpp  user-info.cpp  user-info.hpp  user-product.cpp  user-product.hpp  user.hpp
frontend/: .gitignore  index.html  jest.config.js  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  setupTests.js
frontend/src/__tests__/: createRoom.test.jsx  emptyNewRoom.test.jsx  join-room.test.jsx  login.test.jsx  onboarding.test.jsx  participants-page.test.jsx  registration.test.jsx  room-page.test.jsx  success.test.jsx  updateUserStatus.test.jsx  userRoomPage.test.jsx
frontend/src/components/: App.test.jsx  layout.jsx  route.jsx
frontend/src/pages/all-users-rooms/: UsersRooms.jsx  bottombar.jsx  index.jsx  navbar.jsx  usersRoomPage.jsx
frontend/src/pages/create-room/: index.jsx
frontend/src/pages/empty-new-room/: emptyNewRoom.css  emptyNewRoom.jsx  index.jsx
frontend/src/pages/expence/: createExpence.jsx  index.jsx
frontend/src/pages/expense/: createExpense.jsx
frontend/src/pages/initial-room-creation/: index.jsx
frontend/src/pages/join-room/: index.jsx
frontend/src/pages/login/: index.jsx  join-room-page.jsx  join-room-page1.jsx  login.test.jsx  room-creation.jsx
frontend/src/pages/onboarding/: index.jsx
frontend/src/pages/participants-page/: index.jsx
frontend/src/pages/registration/: index.jsx
frontend/src/pages/room-page/: index.jsx
frontend/src/pages/room-with-products/: index.jsx
frontend/src/pages/success-page/: index.jsx
frontend/src/pages/update-user-status/: index.jsx
src/pages/login/: index.jsx
